tests/NormalTests/paczka1/fuzzy1/62768869.err
Error in line 1: A622 A622 17,3
Error in line 21: MUNg A686 95,3
Error in line 24: MUNg A622 175,2
Error in line 32: MUNg A622 81,1
Error in line 18: 8Td A714 376,2
